--- a/index.html
+++ b/index.html
@@ -59,18 +59,20 @@
         <img class="header__image" src="./images/inside_coffee_shop.png" />
 
         <div class="header__footer">
-          <ul class="header__cafe-hours">
-            <li class="header__cafe-hours-line">Hours</li>
-            <li class="header__cafe-hours-line">
+          <div class="header__footer_hours">
+            <p class="header__footer_paragraph">Hours</p>
+            <p class="header__footer_paragraph">
               Monday - Friday (10:00 - 19:00)
-            </li>
-            <li class="header__cafe-hours-line">
-              Satuday - Sunday (11:00 - 18:00)
-            </li>
-          </ul>
-          <p class="header__cafe-address">
-            200 Success Avenue, The Town of Practicum
-          </p>
+            </p>
+            <p class="header__footer_paragraph">
+              Saturday - Sunday (11:00 - 18:00)
+            </p>
+          </div>
+          <div class="header__footer_address">
+            <p class="header__footer_paragraph">
+              200 Success Avenue, The Town of Practicum
+            </p>
+          </div>
         </div>
       </header>
 
