fixed first page

--- a/index.html
+++ b/index.html
@@ -87,24 +87,17 @@
             <div class="menu__card filter">
               <h3 class="menu__card_title">Filter</h3>
               <ul class="menu__card_list">
-                <li class="menu__card_list_item">Regular (12 oz) $1</li>
+                <li class="menu__card_list_item">
+                  Regular (12 oz)
+                  <div class="menu__divider">__</div>
+                  $1
+                </li>
                 <li class="menu__card_list_item">Large (16 oz) $1.25</li>
                 <li class="menu__card_list_item">XL (20 oz) $1.5</li>
                 <li class="menu__card_list_item">
                   Party-size (24 oz, decaf) $1.75
                 </li>
                 <li class="menu__card_list_item">Iced Coffee (16 oz) $1.25</li>
-              </ul>
-            </div>
-            <div class="menu__card espresso">
-              <h3 class="menu__card_title">Espresso</h3>
-              <ul class="menu__card_list">
-                <li class="menu__card_list_item">Macchiato $2.25</li>
-                <li class="menu__card_list_item">Cortado $2.5</li>
-                <li class="menu__card_list_item">Mocha $3</li>
-                <li class="menu__card_list_item">
-                  Sunrise in the Bay Area (decaf) $10
-                </li>
               </ul>
             </div>
             <div class="menu__card baked">
@@ -116,6 +109,17 @@
                 <li class="menu__card_list_item">Blue Velvet Cake $3.75</li>
                 <li class="menu__card_list_item">Web Cookie $2</li>
                 <li class="menu__card_list_item">Fresh Bug’uette $0.25</li>
+              </ul>
+            </div>
+            <div class="menu__card espresso">
+              <h3 class="menu__card_title">Espresso</h3>
+              <ul class="menu__card_list">
+                <li class="menu__card_list_item">Macchiato $2.25</li>
+                <li class="menu__card_list_item">Cortado $2.5</li>
+                <li class="menu__card_list_item">Mocha $3</li>
+                <li class="menu__card_list_item">
+                  Sunrise in the Bay Area (decaf) $10
+                </li>
               </ul>
             </div>
           </div>
