--- a/index.html
+++ b/index.html
@@ -89,36 +89,89 @@
               <ul class="menu__card_list">
                 <li class="menu__card_list_item">
                   Regular (12 oz)
-                  <div class="menu__divider">__</div>
+                  <div class="menu__divider"></div>
                   $1
                 </li>
-                <li class="menu__card_list_item">Large (16 oz) $1.25</li>
-                <li class="menu__card_list_item">XL (20 oz) $1.5</li>
                 <li class="menu__card_list_item">
-                  Party-size (24 oz, decaf) $1.75
+                  Large (16 oz)
+                  <div class="menu__divider"></div>
+                  $1.25
                 </li>
-                <li class="menu__card_list_item">Iced Coffee (16 oz) $1.25</li>
+                <li class="menu__card_list_item">
+                  XL (20 oz)
+                  <div class="menu__divider"></div>
+                  $1.5
+                </li>
+                <li class="menu__card_list_item">
+                  Party-size (24 oz, decaf)
+                  <div class="menu__divider"></div>
+                  $1.75
+                </li>
+                <li class="menu__card_list_item">
+                  Iced Coffee (16 oz)
+                  <div class="menu__divider"></div>
+                  $1.25
+                </li>
+              </ul>
+            </div>
+
+            <div class="menu__card espresso">
+              <h3 class="menu__card_title">Espresso</h3>
+              <ul class="menu__card_list">
+                <li class="menu__card_list_item">
+                  Macchiato
+                  <div class="menu__divider"></div>
+                  $2.25
+                </li>
+                <li class="menu__card_list_item">
+                  Cortado
+                  <div class="menu__divider"></div>
+                  $2.5
+                </li>
+                <li class="menu__card_list_item">
+                  Mocha
+                  <div class="menu__divider"></div>
+                  $3
+                </li>
+                <li class="menu__card_list_item">
+                  Sunrise in the Bay Area (decaf)
+                  <div class="menu__divider"></div>
+                  $10
+                </li>
               </ul>
             </div>
             <div class="menu__card baked">
               <h3 class="menu__card_title">Baked Goods</h3>
               <ul class="menu__card_list">
-                <li class="menu__card_list_item">Almond Croissant $2</li>
-                <li class="menu__card_list_item">Banana Bread $1.75</li>
-                <li class="menu__card_list_item">Key Lime Pie $3</li>
-                <li class="menu__card_list_item">Blue Velvet Cake $3.75</li>
-                <li class="menu__card_list_item">Web Cookie $2</li>
-                <li class="menu__card_list_item">Fresh Bug’uette $0.25</li>
-              </ul>
-            </div>
-            <div class="menu__card espresso">
-              <h3 class="menu__card_title">Espresso</h3>
-              <ul class="menu__card_list">
-                <li class="menu__card_list_item">Macchiato $2.25</li>
-                <li class="menu__card_list_item">Cortado $2.5</li>
-                <li class="menu__card_list_item">Mocha $3</li>
                 <li class="menu__card_list_item">
-                  Sunrise in the Bay Area (decaf) $10
+                  Almond Croissant
+                  <div class="menu__divider"></div>
+                  $2
+                </li>
+                <li class="menu__card_list_item">
+                  Banana Bread
+                  <div class="menu__divider"></div>
+                  $1.75
+                </li>
+                <li class="menu__card_list_item">
+                  Key Lime Pie
+                  <div class="menu__divider"></div>
+                  $3
+                </li>
+                <li class="menu__card_list_item">
+                  Blue Velvet Cake
+                  <div class="menu__divider"></div>
+                  $3.75
+                </li>
+                <li class="menu__card_list_item">
+                  Web Cookie
+                  <div class="menu__divider"></div>
+                  $2
+                </li>
+                <li class="menu__card_list_item">
+                  Fresh Bug’uette
+                  <div class="menu__divider"></div>
+                  $0.25
                 </li>
               </ul>
             </div>
@@ -129,21 +182,26 @@
           <h1 class="recipes__title">Recipes</h1>
           <h2 class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
-            experience
+            convenience:
           </h2>
           <div class="recipes__videos">
-            <iframe
-              class="recipes__iframe"
-              src="https://www.youtube.com/watch?v=j6VlT_jUVPc"
-            >
-            </iframe>
-            <p class="recipes__video_caption">Aeropress recipe</p>
-            <iframe
-              class="recipes__iframe"
-              src="https://www.youtube.com/watch?v=st571DYYTR8"
-            >
-            </iframe>
-            <p class="recipes__video_caption">French press recipe</p>
+            <div class="recipe__video">
+              <iframe
+              class="recipe__video_iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                allowfullscreen
+              ></iframe>
+
+              <p class="recipes__video_caption">Aeropress recipe <div class="recipe__divider"></div>~5 min</p>
+            </div>
+            <div class="recipe__video">
+              <iframe
+              class="recipe__video_iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?controls=0"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video_caption">French press recipe <div class="recipe__divider"></div>~15 min</p>
+            </div>
           </div>
         </section>
 
