fixed enu and almost done with recipe video page"

--- a/index.html
+++ b/index.html
@@ -187,20 +187,28 @@
           <div class="recipes__videos">
             <div class="recipe__video">
               <iframe
-              class="recipe__video_iframe"
+                class="recipe__video_iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 allowfullscreen
               ></iframe>
 
-              <p class="recipes__video_caption">Aeropress recipe <div class="recipe__divider"></div>~5 min</p>
+              <span class="recipes__video_caption_container">
+                <p class="recipes__video_caption">Aeropress recipe</p>
+                <div class="recipe__divider"></div>
+                <p class="recipes__video_caption">~5 min</p>
+              </span>
             </div>
             <div class="recipe__video">
               <iframe
-              class="recipe__video_iframe"
+                class="recipe__video_iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?controls=0"
                 allowfullscreen
               ></iframe>
-              <p class="recipes__video_caption">French press recipe <div class="recipe__divider"></div>~15 min</p>
+              <span class="recipes__video_caption_container">
+                <p class="recipes__video_caption">French press recipe</p>
+                <div class="recipe__divider"></div>
+                <p class="recipes__video_caption">~15 min</p>
+              </span>
             </div>
           </div>
         </section>
