--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
           </ul>
         </nav>
         <h1 class="header__title">
-          <span class="span-accent">Specialty&nbsp; Coffee </span> <br />
-          in the Practicum Library
+          <span class="header__span-accent">Specialty&nbsp; Coffee </span>
+          <hr class="header__title_divider">in the Practicum Library</h1>
+
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
