--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty&nbsp; Coffee </span>
-          <hr class="header__title_divider">in the Practicum Library</h1>
-
-        </h1>
+         <span><hr class="header__title_divider">in the Practicum Library</h1></span> 
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
           the cozy vibes to help you get creative.
