--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty&nbsp; Coffee </span>
-         <span><hr class="header__title_divider">in the Practicum Library</h1></span> 
+          in the Practicum Library
+        </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
           the cozy vibes to help you get creative.
