--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty&nbsp; Coffee </span>
-          in the Practicum Library
+          <span class="header__other-accent">in the Practicum Library</span>
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
@@ -243,7 +243,7 @@
               class="reservation__form_input"
               placeholder="email@email.com"
             />
-            <br />
+
             <button class="reservation__button">Book a table</button>
             <div class="reservation__checkbox_container">
               <input type="checkbox" class="reservation__checkbox" />
