--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         />
 
         <div class="header__footer">
-          <div class="header__footer_hours">
-            <p class="header__footer_paragraph">Hours</p>
-            <p class="header__footer_paragraph">
+          <div class="header__footer-hours">
+            <p class="header__footer-paragraph">Hours</p>
+            <p class="header__footer-paragraph">
               Monday - Friday (10:00 - 19:00)
             </p>
-            <p class="header__footer_paragraph">
+            <p class="header__footer-paragraph">
               Saturday - Sunday (11:00 - 18:00)
             </p>
           </div>
-          <div class="header__footer_address">
-            <p class="header__footer_paragraph">
+          <div class="header__footer-address">
+            <p class="header__footer-paragraph">
               200 Success Avenue, The Town of Practicum
             </p>
           </div>
@@ -87,35 +87,35 @@
       <main class="main">
         <section class="menu">
           <h1 class="menu__title">Menu</h1>
-          <h2 class="menu__title_subtitle">
+          <h2 class="menu__title-subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
           </h2>
           <div class="menu__cards">
             <div class="menu__card filter">
-              <h3 class="menu__card_title">Filter</h3>
-              <ul class="menu__card_list">
-                <li class="menu__card_list_item">
+              <h3 class="menu__card-title">Filter</h3>
+              <ul class="menu__card-list">
+                <li class="menu__card-list-item">
                   Regular (12 oz)
                   <div class="menu__divider"></div>
                   $1
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Large (16 oz)
                   <div class="menu__divider"></div>
                   $1.25
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   XL (20 oz)
                   <div class="menu__divider"></div>
                   $1.5
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Party-size (24 oz, decaf)
                   <div class="menu__divider"></div>
                   $1.75
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Iced Coffee (16 oz)
                   <div class="menu__divider"></div>
                   $1.25
@@ -124,24 +124,24 @@
             </div>
 
             <div class="menu__card espresso">
-              <h3 class="menu__card_title">Espresso</h3>
-              <ul class="menu__card_list">
-                <li class="menu__card_list_item">
+              <h3 class="menu__card-title">Espresso</h3>
+              <ul class="menu__card-list">
+                <li class="menu__card-list-item">
                   Macchiato
                   <div class="menu__divider"></div>
                   $2.25
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Cortado
                   <div class="menu__divider"></div>
                   $2.5
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Mocha
                   <div class="menu__divider"></div>
                   $3
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Sunrise in the Bay Area (decaf)
                   <div class="menu__divider"></div>
                   $10
@@ -149,34 +149,34 @@
               </ul>
             </div>
             <div class="menu__card baked">
-              <h3 class="menu__card_title">Baked Goods</h3>
-              <ul class="menu__card_list">
-                <li class="menu__card_list_item">
+              <h3 class="menu__card-title">Baked Goods</h3>
+              <ul class="menu__card-list">
+                <li class="menu__card-list-item">
                   Almond Croissant
                   <div class="menu__divider"></div>
                   $2
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Banana Bread
                   <div class="menu__divider"></div>
                   $1.75
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Key Lime Pie
                   <div class="menu__divider"></div>
                   $3
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Blue Velvet Cake
                   <div class="menu__divider"></div>
                   $3.75
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Web Cookie
                   <div class="menu__divider"></div>
                   $2
                 </li>
-                <li class="menu__card_list_item">
+                <li class="menu__card-list-item">
                   Fresh Bug’uette
                   <div class="menu__divider"></div>
                   $0.25
@@ -195,27 +195,27 @@
           <div class="recipes__videos">
             <div class="recipe__video">
               <iframe
-                class="recipe__video_iframe"
+                class="recipe__video-iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 allowfullscreen
               ></iframe>
 
-              <div class="recipes__video_caption_container">
-                <p class="recipes__video_caption">Aeropress recipe</p>
+              <div class="recipes__video-caption-container">
+                <p class="recipes__video-caption">Aeropress recipe</p>
                 <div class="recipe__divider"></div>
-                <p class="recipes__video_caption">~5 min</p>
+                <p class="recipes__video-caption">~5 min</p>
               </div>
             </div>
             <div class="recipe__video">
               <iframe
-                class="recipe__video_iframe"
+                class="recipe__video-iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?controls=0"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video_caption_container">
-                <p class="recipes__video_caption">French press recipe</p>
+              <div class="recipes__video-caption-container">
+                <p class="recipes__video-caption">French press recipe</p>
                 <div class="recipe__divider"></div>
-                <p class="recipes__video_caption">~15 min</p>
+                <p class="recipes__video-caption">~15 min</p>
               </div>
             </div>
           </div>
@@ -224,30 +224,30 @@
         <section class="reservation">
           <h1 class="reservation__title">Book a table</h1>
           <form class="reservation__form">
-            <fieldset class="reservation__form_fieldset">Name *</fieldset>
-            <input class="reservation__form_input" placeholder="Name Surname" />
-            <fieldset class="reservation__form_fieldset">
+            <fieldset class="reservation__form-fieldset">Name *</fieldset>
+            <input class="reservation__form-input" placeholder="Name Surname" />
+            <fieldset class="reservation__form-fieldset">
               Number of guests *
             </fieldset>
             <input
-              class="reservation__form_input"
+              class="reservation__form-input"
               type="number"
               placeholder="1-8"
             />
-            <fieldset class="reservation__form_fieldset">
+            <fieldset class="reservation__form-fieldset">
               Date & time *
             </fieldset>
-            <input type="datetime-local" class="reservation__form_input" />
-            <fieldset class="reservation__form_fieldset">Your email *</fieldset>
+            <input type="datetime-local" class="reservation__form-input" />
+            <fieldset class="reservation__form-fieldset">Your email *</fieldset>
             <input
-              class="reservation__form_input"
+              class="reservation__form-input"
               placeholder="email@email.com"
             />
 
             <button class="reservation__button">Book a table</button>
             <div class="reservation__checkbox_container">
               <input type="checkbox" class="reservation__checkbox" />
-              <p class="reservation__checkbox_text">
+              <p class="reservation__checkbox-text">
                 I agree with the terms of use
               </p>
             </div>
@@ -255,10 +255,10 @@
         </section>
         <section class="about">
           <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation_blurred"></div>
+          <div class="about__circle about__circle_animation-blurred"></div>
 
           <h1 class="about__title">About the coffee shop</h1>
-          <div class="about__description_container">
+          <div class="about__description-container">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
               features 6 tables and free WiFi.
@@ -282,20 +282,20 @@
             src="./images/practicum_logo.svg"
             alt="legendary practicum logo"
           />
-          <div class="footer__social_media">
-            <h2 class="footer__social_media_header">Social Media</h2>
-            <ul class="footer__social_medias">
-              <li class="footer__social_media">
+          <div class="footer__social-media">
+            <h2 class="footer__social-media-header">Social Media</h2>
+            <ul class="footer__social-medias">
+              <li class="footer__social-media">
                 <img
-                  class="footer__social_media_logo"
+                  class="footer__social-media-logo"
                   src="./images/facebook_white.svg"
                   alt="zucc logo"
                 />
                 <a>Facebook</a>
               </li>
-              <li class="footer__social_media">
+              <li class="footer__social-media">
                 <img
-                  class="footer__social_media_logo"
+                  class="footer__social-media-logo"
                   src="./images/instagram_white.svg"
                   alt="also zucc logo"
                 />
