--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
             convenience:
           </h2>
           <div class="recipes__videos">
-            <div class="recipe__video">
+            <div class="recipe-video">
               <iframe
-                class="recipe__video-iframe"
+                class="recipe-video__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 allowfullscreen
               ></iframe>
 
               <div class="recipes__video-caption-container">
                 <p class="recipes__video-caption">Aeropress recipe</p>
-                <div class="recipe__divider"></div>
+                <div class="recipe-divider"></div>
                 <p class="recipes__video-caption">~5 min</p>
               </div>
             </div>
-            <div class="recipe__video">
+            <div class="recipe-video">
               <iframe
-                class="recipe__video-iframe"
+                class="recipe-video__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?controls=0"
                 allowfullscreen
               ></iframe>
               <div class="recipes__video-caption-container">
                 <p class="recipes__video-caption">French press recipe</p>
-                <div class="recipe__divider"></div>
+                <div class="recipe-divider"></div>
                 <p class="recipes__video-caption">~15 min</p>
               </div>
             </div>
