--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
     />
     <meta name="author" content="Parker Brandt" />
 
-    <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
     <link rel="icon" href="favicon_coffee_bean.ico" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page">
