--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <meta name="author" content="Parker Brandt" />
 
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" href="favicon_coffee_bean.ico" />
+    <link rel="icon" href="favicon.ico" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif&display=swap"
       rel="stylesheet"
@@ -44,22 +42,22 @@
           <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Recipes</a>
+              <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Book a table</a>
+              <a class="nav__link" href="#reservation">Book a table</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contacts</a>
+              <a class="nav__link" href="#about">Contacts</a>
             </li>
           </ul>
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty&nbsp; Coffee </span>
-          <span class="header__other-accent">in the Practicum Library</span>
+          in the Practicum Library
         </h1>
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
@@ -74,16 +72,10 @@
 
         <div class="header__footer">
           <div class="header__footer-hours">
-            <p class="header__footer-paragraph">Hours</p>
-            <p class="header__footer-paragraph">
-              Monday - Friday (10:00 - 19:00)
-            </p>
-            <p class="header__footer-paragraph">
-              Saturday - Sunday (11:00 - 18:00)
-            </p>
-          </div>
-          <div class="header__footer-address">
-            <p class="header__footer-paragraph">
+            <p class="header__paragraph">Hours</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+            <p class="header__paragraph">
               200 Success Avenue, The Town of Practicum
             </p>
           </div>
@@ -91,100 +83,100 @@
       </header>
 
       <main class="main">
-        <section class="menu">
-          <h1 class="menu__title">Menu</h1>
-          <h2 class="menu__title-subtitle">
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+          <h3 class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
-          </h2>
+          </h3>
           <div class="menu__cards">
-            <div class="menu__card filter">
-              <h3 class="menu__card-title">Filter</h3>
-              <ul class="menu__card-list">
-                <li class="menu__card-list-item">
+            <div class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Regular (12 oz)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Large (16 oz)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1.25
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   XL (20 oz)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1.5
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Party-size (24 oz, decaf)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1.75
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Iced Coffee (16 oz)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1.25
                 </li>
               </ul>
             </div>
 
-            <div class="menu__card espresso">
-              <h3 class="menu__card-title">Espresso</h3>
-              <ul class="menu__card-list">
-                <li class="menu__card-list-item">
+            <div class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Macchiato
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $2.25
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Cortado
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $2.5
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Mocha
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $3
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Sunrise in the Bay Area (decaf)
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $10
                 </li>
               </ul>
             </div>
-            <div class="menu__card baked">
-              <h3 class="menu__card-title">Baked Goods</h3>
-              <ul class="menu__card-list">
-                <li class="menu__card-list-item">
+            <div class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
                   Almond Croissant
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $2
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Banana Bread
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $1.75
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Key Lime Pie
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $3
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Blue Velvet Cake
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $3.75
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Web Cookie
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $2
                 </li>
-                <li class="menu__card-list-item">
+                <li class="card__list-item">
                   Fresh Bug’uette
-                  <div class="menu__divider"></div>
+                  <div class="card__list-divider"></div>
                   $0.25
                 </li>
               </ul>
@@ -192,79 +184,74 @@
           </div>
         </section>
 
-        <section class="recipes">
-          <h1 class="recipes__title">Recipes</h1>
-          <h2 class="recipes__subtitle">
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <h3 class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenience:
-          </h2>
+          </h3>
           <div class="recipes__videos">
-            <div class="recipe-video">
+            <!--This recipe__video acts as a container for the iframe and caption-->
+            <div class="recipes__video">
               <iframe
-                class="recipe-video__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 allowfullscreen
               ></iframe>
 
-              <div class="recipes__video-caption-container">
-                <p class="recipes__video-caption">Aeropress recipe</p>
-                <div class="recipe-divider"></div>
-                <p class="recipes__video-caption">~5 min</p>
-              </div>
+              <p class="recipes__video-caption">Aeropress recipe</p>
+              <p class="recipes__video-caption">~5 min</p>
             </div>
-            <div class="recipe-video">
+            <div class="recipes__video">
               <iframe
-                class="recipe-video__iframe"
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8?controls=0"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video-caption-container">
-                <p class="recipes__video-caption">French press recipe</p>
-                <div class="recipe-divider"></div>
-                <p class="recipes__video-caption">~15 min</p>
-              </div>
+
+              <p class="recipes__video-caption">French press recipe</p>
+              <p class="recipes__video-caption">~15 min</p>
             </div>
           </div>
         </section>
 
-        <section class="reservation">
-          <h1 class="reservation__title">Book a table</h1>
-          <form class="reservation__form">
-            <fieldset class="reservation__form-fieldset">Name *</fieldset>
-            <input class="reservation__form-input" placeholder="Name Surname" />
-            <fieldset class="reservation__form-fieldset">
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <label for="name" class="form__fieldset">Name *</label>
+            <input class="form__input" name="name" placeholder="Name Surname" />
+
+            <label for="guests" class="form__fieldset">
               Number of guests *
-            </fieldset>
+            </label>
             <input
-              class="reservation__form-input"
+              class="form__input"
               type="number"
               placeholder="1-8"
+              name="guests"
             />
-            <fieldset class="reservation__form-fieldset">
-              Date & time *
-            </fieldset>
-            <input type="datetime-local" class="reservation__form-input" />
-            <fieldset class="reservation__form-fieldset">Your email *</fieldset>
+            <label for="date" class="form__fieldset"> Date & time * </label>
+            <input name="date" type="datetime-local" class="form__input" />
+            <label for="email" class="form__fieldset">Your email *</label>
             <input
-              class="reservation__form-input"
+              name="email"
+              class="form__input"
               placeholder="email@email.com"
             />
 
-            <button class="reservation__button">Book a table</button>
-            <div class="reservation__checkbox-container">
-              <input type="checkbox" class="reservation__checkbox" />
-              <p class="reservation__checkbox-text">
-                I agree with the terms of use
-              </p>
+            <button class="form__button">Book a table</button>
+            <div class="form__checkbox-container">
+              <input type="checkbox" class="form__checkbox" />
+              <p class="form__checkbox-text">I agree with the terms of use</p>
             </div>
           </form>
         </section>
-        <section class="about">
+        <section class="about" id="about">
           <div class="about__circle"></div>
-          <div class="about__circle about__circle_animation-blurred"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
 
-          <h1 class="about__title">About the coffee shop</h1>
-          <div class="about__description-container">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
               features 6 tables and free WiFi.
@@ -288,24 +275,34 @@
             src="./images/practicum_logo.svg"
             alt="legendary practicum logo"
           />
+
+          <!--footer__social-media is used to wrap the header and list together, could not find this div in the brief so i dont know what to title it-->
           <div class="footer__social-media">
-            <h2 class="footer__social-media-header">Social Media</h2>
-            <ul class="footer__social-medias">
-              <li class="footer__social-media">
+            <h2 class="footer__social-heading">Social Media</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
                 <img
-                  class="footer__social-media-logo"
+                  class="footer__social-icon"
                   src="./images/facebook_white.svg"
                   alt="zucc logo"
                 />
-                <a>Facebook</a>
+                <a
+                  href="https://www.facebook.com/PracticumUSA/"
+                  class="footer__social-link"
+                  >Facebook</a
+                >
               </li>
-              <li class="footer__social-media">
+              <li class="footer__list-item">
                 <img
-                  class="footer__social-media-logo"
+                  class="footer__social-icon"
                   src="./images/instagram_white.svg"
                   alt="also zucc logo"
                 />
-                <a>Instagram</a>
+                <a
+                  href="https://www.instagram.com/yndx.practicum/?hl=en"
+                  class="footer__social-link"
+                  >Instagram</a
+                >
               </li>
             </ul>
           </div>
