--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <h2 class="reservation__title">Book a table</h2>
           <form class="reservation__form form">
             <label for="name" class="form__fieldset">Name *</label>
-            <input class="form__input" name="name" placeholder="Name Surname" />
+            <input class="form__input" id="name" placeholder="Name Surname" />
 
             <label for="guests" class="form__fieldset">
               Number of guests *
@@ -228,13 +228,13 @@
               class="form__input"
               type="number"
               placeholder="1-8"
-              name="guests"
+              id="guests"
             />
             <label for="date" class="form__fieldset"> Date & time * </label>
-            <input name="date" type="datetime-local" class="form__input" />
+            <input id="date" type="datetime-local" class="form__input" />
             <label for="email" class="form__fieldset">Your email *</label>
             <input
-              name="email"
+              id="email"
               class="form__input"
               placeholder="email@email.com"
             />
