--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@
         />
 
         <div class="header__footer">
-          <p class="header__paragraph header__hours">Hours</p>
-          <p class="header__paragraph header__hours">
-            Monday - Friday (10:00 - 19:00)
-          </p>
-          <p class="header__paragraph header__hours">
-            Saturday - Sunday (11:00 - 18:00)
-          </p>
-          <p class="header__paragraph header__address">
+          <div class="header__hours">
+            <p class="header__paragraph">Hours</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <p class="header__paragraph">
             200 Success Avenue, The Town of Practicum
           </p>
         </div>
@@ -253,10 +251,8 @@
           </form>
         </section>
         <section class="about" id="about">
-          <div class="about__circle-overflow_container">
-            <div class="about__circle"></div>
-            <div class="about__circle about__circle_animation_blurred"></div>
-          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
 
           <h2 class="about__title">About the coffee shop</h2>
           <div class="about__content">
