--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
               <button class="form__button">Book a table</button>
             </fieldset>
             <fieldset class="form__fieldset">
-              <label class="form__label form__label_checkbox">
+              <label class="form__label form__label_type_checkbox">
                 <input type="checkbox" class="form__checkbox" />
                 I agree with the terms of use
               </label>
